@@ -123,6 +123,6 @@ The end of the previous snippet shows also how to display the following images.
 
 \section hsv_next Next tutorial
 
-You are now ready to see how to continue with \ref tutorial-grabber.
+You are now ready to see how to continue with \ref tutorial-hsv-range-tuner.
 
 */
